chapter 4 re-read
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5173 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -25,7 +25,7 @@ it can be rephrased as the presence of scattering products at high pseudorapidit
 
 
 
-%\TODO{add the phi vs. eta diagram to explain the forwardness?}
+%\TODO{add the phi vs.~eta diagram to explain the forwardness?}
 %\fig{fig/pdf/ttm_acceptance_overview.pdf}{ttm acceptance overview}{acceptance overview}
 
 
@@ -55,11 +55,11 @@ The \abb{CSC} detectors are gaseous detectors (multi-wire proportional chambers)
 
 \block{Telescopes T2}
 
-The \abb{T2} telescopes are installed in the forward shielding of \abb{CMS} between the vacuum chamber and the inner shielding of the \abb{CMS} HF calorimeter. They are centered about $13.5\un{m}$ from the interaction point. The \abb{T2} telescopes cover the pseudorapidity region $5.3 < \et < 6.5$.
+The \abb{T2} telescopes are installed in the forward shielding of \abb{CMS} behind the HF and before the Castor calorimeter. They are centered about $13.5\un{m}$ from the interaction point. The \abb{T2} telescopes cover the pseudorapidity region $5.3 < \et < 6.5$.
 
-There is one telescope (see \Fg{t2 installed}) on each side of \abb{IP}5. Each telescope consists of two quarters. As shown in \Fg{t2 quarter}, each quarter includes 5 semicircular planes, each equipped with 2 back-to-back mounted Gas Electron Multiplier (\abb{GEM}) detectors. Each detector has an azimuthal coverage of $192^\circ$, therefore there is an overlap between the two quarters within each telescope.
+There is one telescope (see \Fg{t2 installed}) on each side of \abb{IP}5. Each telescope consists of two quarters. As shown in \Fg{t2 quarter}, each quarter includes 10 semicircular planes assembled back-to-back in 5 pairs. The distance between two adjacent pairs is $91\un{mm}$. Each plane is equipped with a Gas Electron Multiplier (\abb{GEM}) detector. Each detector has an azimuthal coverage of $192^\circ$, therefore there is an overlap between the two quarters within each telescope.
 
-The \abb{GEM} detectors are gaseous detectors where the electron multiplication is realized by three perforated Cu-clad polyimide foils, separated by $2\un{mm}$. The inner radius of the perforation holes is $65\un{\mu m}$, their density lies between $50$ and $100/\un{mm^2}$ \TODO{check}. With an electric field about $3.6 \un{kV/cm}$ between the \abb{GEM} foils, the overall gas amplification is roughly $8000$. The \abb{GEM} detectors have double read-out: strips (radial coordinate) and pads (coarse radial and azimuthal). The strip radia range from $43$ to $144\un{mm}$, their width and spacing is $80$ and $400\un{\mu m}$ respectively. The pads, used for triggering, are of sizes from $2\times 2\un{mm^2}$ to $7\times 7\un{mm^2}$. The spatial resolution is about $0.15\un{mm}$ in the radial direction and $0.8^\circ$ in the azimuthal one. Further details can be found in Sec.~5.3 in \bref{totem08}.
+The \abb{GEM} detectors are gaseous detectors where the electron multiplication is realized by three perforated Cu-clad polyimide foils, separated by $2\un{mm}$. The inner radius of the perforation holes is $65\un{\mu m}$, their density is roughly $50/\un{mm^2}$. With an electric field about $3.6 \un{kV/cm}$ between the \abb{GEM} foils, the overall gas amplification is roughly $8000$. The \abb{GEM} detectors have double read-out: strips (radial coordinate) and pads (coarse radial and azimuthal). The strip radia range from $43$ to $144\un{mm}$, their width and spacing is $80$ and $400\un{\mu m}$ respectively. The pads, used for triggering, are of sizes from $2\times 2\un{mm^2}$ to $7\times 7\un{mm^2}$. The spatial resolution is about $0.15\un{mm}$ in the radial direction and $0.8^\circ$ in the azimuthal one. Further details can be found in Sec.~5.3 in \bref{totem08}.
 
 % gas detector, radiation hard, high rate, good spatial, and timing resolution
 
