--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -21,7 +21,7 @@ it can be rephrased as the presence of scattering products at high pseudorapidit
 \fig{fig/pdf/ttm_processes.pdf}{ttm processes}{Diffractive process classes with a cross-section estimate for the center-of-mass energy $\sqrt s = 14\un{TeV}$. For each class there are two types of diagrams (using the same color code). Left: a Feynman-like diagram showing the nature of the process, with Pomeron exchange (the double lines) as an effective description of the diffraction phenomena. Single external lines denote protons, the tripled outgoing lines represent proton dissociation. Right: a sample hit map in the pseudorapidity ($\et$) vs.~azimuthal angle ($\ph$) space.}
 
 
-\abb{TOTEM}'s physics programme thus sets special requirements for the detector apparatus. In particular large rapidity coverage - to detect most fragments from inelastic collisions and excellent acceptance for outgoing elastic and diffractive protons. To accomplish this task, \abb{TOTEM} comprises three sub-detectors: the \em{telescopes \abb{T1} and \abb{T2}} and a system of \em{Roman Pots} (\abb{RP}s). The role of the telescopes is to detect the products of inelastic collisions. They are able to reconstruct many tracks per event and extrapolate them to the interaction point (\abb{IP}). This is essential for background rejection. The telescopes were designed to stand the high radiation load expected at their location. The role of the \abb{RP} system is to detect the surviving protons. As indicated in \Fg{ttm processes}, these are scattered to very low angles. That is why the \abb{RP}s are installed far from the \abb{IP} (scattered protons can gain larger elongations from the beam) and can be approached very close to the beam (to detect protons with small elongations, that is with small scattering angles). For safety reasons, no detectors are allowed to be inside the beam-pipe before the beam is stable. This means that the \abb{RP}s must be movable beam-pipe insertions, retracted to a safe position during beam fill and adjustments and approached close to the beam for measurements. All three sub-detectors are trigger capable which is essential for the total cross-section measurement.
+\abb{TOTEM}'s physics programme thus sets special requirements for the detector apparatus. In particular large rapidity coverage - to detect most fragments from inelastic collisions and excellent acceptance for outgoing elastic and diffractive protons. To accomplish this task, \abb{TOTEM} comprises three sub-detectors: the \em{telescopes \abb{T1} and \abb{T2}} and a system of \em{Roman Pots} (\abb{RP}s). The role of the telescopes is to detect the products of inelastic collisions. They are able to reconstruct many tracks per event and extrapolate them to the interaction point (\abb{IP}), which is essential for background rejection. The telescopes were designed to stand the high radiation load expected at their location. The role of the \abb{RP} system is to detect the surviving protons. As indicated in \Fg{ttm processes}, these are scattered to very low angles. That is why the \abb{RP}s are installed far from the \abb{IP} (scattered protons can gain larger elongations from the beam) and can be approached very close to the beam (to detect protons with small elongations, that is with small scattering angles). For safety reasons, no detectors are allowed to be inside the beam-pipe before the beam is stable. This means that the \abb{RP}s must be movable beam-pipe insertions, retracted to a safe position during beam fill and adjustments and approached close to the beam for measurements. All three sub-detectors are trigger capable which is crucial for the total cross-section measurement.
 
 
 
@@ -199,7 +199,7 @@ Since the optics \Eq{ttm lin par} relates the kinematics of a proton at the \abb
 
 \fig{fig/pdf/ttm_elastic_acceptance.pdf}{ttm elastic acceptance}{The elastic acceptances for three optics types. Calculated for $\sqrt{s} = 14\un{TeV}$ and with \abb{RP} sensors at $10\si + 0.5\un{mm}$. The horizontal line marks the points $|t_{30}|$ where the acceptances reach $30\percent$.}
 
-The rich physics programme of \abb{TOTEM} requires several running scenarios, including several optics. We will now review the scenarios as they were originally forseen for the center-of-mass energy $\sqrt s = 14\un{TeV}$. Afterwards, we will describe the run conditions used for the first elastic scattering measurement at $\sqrt s = 7\un{TeV}$ (discussed in \Sc{felm}). We will classify the scenarios by the beta-function values at the interaction point $\be^*$.
+The rich physics programme of \abb{TOTEM} requires several running scenarios, including several optics. We will now review the scenarios as they were originally foreseen for the center-of-mass energy $\sqrt s = 14\un{TeV}$. Afterwards, we will describe the run conditions used for the first elastic scattering measurement at $\sqrt s = 7\un{TeV}$ (discussed in \Sc{felm}). We will classify the scenarios by the beta-function values at the interaction point $\be^*$.
 
 \> The \em{high-$\be^*$} scenario is dedicated to the measurement of the total cross-section and low-$|t|$ elastic scattering. The optics with $\be^* = 1535\un{m}$ provides high effective lengths: $L_x$ up to $110\un{m}$ and $L_y$ up to $270\un{m}$ (both in the $220\un{m}$ stations). This ensures a good $t$-resolution (see \Sc{elr 1535}). To improve it further, this scenario counts on a reduced normalized emittance of $\ep_{\rm N}=1\un{\mu m\ rad}$. This leads to a very low beam divergence at the \abb{IP} $\si_{\th^*} = 0.3\un{\mu rad}$. The expected beam sizes (i.e.~the beam sigmas) at the $220\un{m}$ stations are $\si_x = 0.03\un{mm}$ and $\si_y = 0.085\un{mm}$. The beam size, quite generally, determines the approach of the \abb{RP}s to the beam -- a typical approach is about $10\si$ in each direction. The resulting elastic acceptance is drawn in red in \Fg{ttm elastic acceptance}. The acceptance reaches $30\percent$ at $|t_{30}| = 2\cdot10^{-3}\un{GeV^2}$. This scenario will use a rather low luminosity ${\cal L} \approx 10^{28} \un{cm^{-2}s^{-1}}$.
 
